test/ui/tests/packages/faulty-component-paths/package.stderr
error: could not load the executable component `test` in package `test`
  --> ${TEST_FOLDER}/packages/faulty-component-paths/package.metadata:14:16
   |
14 |         path: "leading/astray",
   |                ^^^^^^^^^^^^^^ 
   |
  note: `${TEST_FOLDER}/packages/faulty-component-paths/leading/astray`: No such file or directory (os error 2)

error: aborting due to previous error

